@@ -1,10 +1,13 @@
-# $NetBSD: Makefile,v 1.14 2006/09/07 20:30:09 smb Exp $
+# $NetBSD: Makefile,v 1.15 2007/01/26 20:09:14 joerg Exp $
 #
 
-DISTNAME=	gtkpod-0.94.0
-PKGREVISION=	5
+DISTNAME=	gtkpod-0.99.8
 CATEGORIES=	audio
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=gtkpod/}
+
+PATCHFILES=	gtkpod-0.99.8_libgpod-0.4.2.diff
+PATCH_SITES=	http://ftp.osuosl.org/pub/gentoo/distfiles/
+PATCH_DIST_STRIP=	-p1
 
 MAINTAINER=	smb@NetBSD.org
 HOMEPAGE=	http://www.gtkpod.org/
@@ -19,9 +22,11 @@ USE_TOOLS+=		intltool msgfmt perl:run pkg-config
 REPLACE_PERL+=		scripts/mab2vcard
 
 BUILDLINK_API_DEPENDS.gtk2+=	gtk2+>=2.4.0
+BUILDLINK_API_DEPENDS.libgpod+=	libgpod>=0.4.2
 
 .include "options.mk"
 
+.include "../../audio/libgpod/buildlink3.mk"
 .include "../../audio/libid3tag/buildlink3.mk"
 .include "../../devel/atk/buildlink3.mk"
 .include "../../devel/gettext-lib/buildlink3.mk"
