@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1535 2007/07/08 20:41:17 smb Exp $
+$NetBSD: CHANGES-2007,v 1.1536 2007/07/08 20:41:45 smb Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -2818,3 +2818,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated devel/bzr to 0.17 [wiz 2007-07-08]
 	Updated devel/scmgit to 1.5.2.3 [wiz 2007-07-08]
 	Updated mail/libetpan to 0.49 [smb 2007-07-08]
+	Updated audio/gtkpod to 0.99.8 [smb 2007-07-08]
